deployment/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superhuman-remote-worker
  labels:
    app.kubernetes.io/name: superhuman-remote-worker
